fix user update
