# docs/swagger.json
@@ -637,7 +637,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.UpdateUserResponse"
+                            "$ref": "#/definitions/response.StatusUserResponse"
                         }
                     }
                 }
@@ -674,7 +674,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.UpdateUserResponse"
+                            "$ref": "#/definitions/response.StatusUserResponse"
                         }
                     }
                 }
@@ -711,6 +711,50 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/response.GetUserByIdResponse"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "update Book",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "DeActive Book by code",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "user information",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/payload.UserUpdate"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.UpdateUserResponse"
                         }
                     }
                 }
@@ -942,6 +986,26 @@
                 }
             }
         },
+        "payload.UserUpdate": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "$ref": "#/definitions/payload.Address"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "phone_number": {
+                    "type": "string"
+                },
+                "role": {
+                    "type": "string"
+                },
+                "user_name": {
+                    "type": "string"
+                }
+            }
+        },
         "response.CategoryResponse": {
             "type": "object",
             "properties": {
@@ -1075,6 +1139,20 @@
         "response.StatusProductResponse": {
             "type": "object",
             "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "response.StatusUserResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/Models.User"
+                },
                 "message": {
                     "type": "string"
                 },
